<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.udacity.androidbasics.tomazmartins.volleyscorer.MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/block_infoMatch"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/std_margin"
            android:background="@color/primaryDark" >

            <TextView
                android:id="@+id/title_block_infoMatch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/std_padding"
                android:paddingLeft="@dimen/std_padding"
                android:paddingTop="@dimen/std_padding"
                android:paddingRight="@dimen/std_padding"
                android:paddingEnd="@dimen/std_padding"
                android:paddingBottom="@dimen/minimum_padding"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="@dimen/std_titleSize"
                android:textColor="@android:color/white"
                android:text="@string/title_block_infoMatch" />

            <TableLayout
                android:id="@+id/block_partialsMatch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TableRow>
                    <TextView
                        android:id="@+id/a_space"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/score_set_1"
                        style="@style/tableCellTitle"
                        android:text="@string/set_1" />

                    <TextView
                        android:id="@+id/score_set_2"
                        style="@style/tableCellTitle"
                        android:text="@string/set_2" />

                    <TextView
                        android:id="@+id/score_set_3"
                        style="@style/tableCellTitle"
                        android:text="@string/set_3" />

                    <TextView
                        android:id="@+id/score_set_4"
                        style="@style/tableCellTitle"
                        android:text="@string/set_4" />

                    <TextView
                        android:id="@+id/score_set_5"
                        style="@style/tableCellTitle"
                        android:text="@string/set_5" />

                    <TextView
                        android:id="@+id/qtd_aces"
                        style="@style/tableCellTitle"
                        android:text="@string/aces" />
                </TableRow>
                <TableRow>

                    <TextView
                        android:id="@+id/ref_teamA"
                        style="@style/tableCellTitle"
                        android:text="@string/name_teamA" />

                    <TextView
                        android:id="@+id/ref_score_set1_teamA"
                        style="@style/tableCell"
                        android:text="@string/std_score" />

                    <TextView
                        android:id="@+id/ref_score_set2_teamA"
                        style="@style/tableCell"
                        android:text="@string/std_score" />

                    <TextView
                        android:id="@+id/ref_score_set3_teamA"
                        style="@style/tableCell"
                        android:text="@string/std_score" />

                    <TextView
                        android:id="@+id/ref_score_set4_teamA"
                        style="@style/tableCell"
                        android:text="@string/std_score" />

                    <TextView
                        android:id="@+id/ref_score_set5_teamA"
                        style="@style/tableCell"
                        android:text="@string/std_score" />

                    <TextView
                        android:id="@+id/ref_aces_teamA"
                        style="@style/tableCell"
                        android:text="@string/std_score" />

                </TableRow>
                <TableRow>

                    <TextView
                        android:id="@+id/ref_teamB"
                        style="@style/tableCellTitle"
                        android:text="@string/name_teamB" />

                    <TextView
                        android:id="@+id/ref_score_set1_teamB"
                        style="@style/tableCell"
                        android:text="@string/std_score" />

                    <TextView
                        android:id="@+id/ref_score_set2_teamB"
                        style="@style/tableCell"
                        android:text="@string/std_score" />

                    <TextView
                        android:id="@+id/ref_score_set3_teamB"
                        style="@style/tableCell"
                        android:text="@string/std_score" />

                    <TextView
                        android:id="@+id/ref_score_set4_teamB"
                        style="@style/tableCell"
                        android:text="@string/std_score" />

                    <TextView
                        android:id="@+id/ref_score_set5_teamB"
                        style="@style/tableCell"
                        android:text="@string/std_score" />

                    <TextView
                        android:id="@+id/ref_aces_teamB"
                        style="@style/tableCell"
                        android:text="@string/std_score" />

                </TableRow>
            </TableLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/block_infoSet"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/std_margin"
            android:background="@color/primaryDark" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/title_block_infoSet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/std_padding"
                    android:paddingLeft="@dimen/std_padding"
                    android:paddingTop="@dimen/std_padding"
                    android:paddingRight="@dimen/std_padding"
                    android:paddingEnd="@dimen/std_padding"
                    android:paddingBottom="@dimen/minimum_padding"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textSize="@dimen/std_titleSize"
                    android:textColor="@android:color/white"
                    android:text="@string/title_block_infoSet" />

                <TextView
                    android:id="@+id/general_info"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/minimum_padding"
                    android:gravity="center"
                    android:textSize="@dimen/std_textSize"
                    android:textStyle="bold"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/block_content_infoSet"
                android:orientation="horizontal"
                android:baselineAligned="false"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:id="@+id/block_infoSet_teamA"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/name_teamA"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:padding="@dimen/minimum_padding"
                            android:gravity="center"
                            android:textSize="@dimen/std_subTitleSize"
                            android:textColor="@android:color/white"
                            android:text="@string/name_teamA" />

                        <ImageView
                            android:id="@+id/ball_possession_teamA"
                            android:contentDescription="@string/description_ball_possession"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/score_teamA"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/minimum_padding"
                        android:gravity="center"
                        android:textSize="@dimen/std_scoreSize"
                        android:textColor="@android:color/white"
                        android:text="@string/std_score" />

                    <Button
                        android:id="@+id/btn_addPoint_teamA"
                        style="@style/buttonStyle"
                        android:text="@string/add_Point" />

                    <Button
                        android:id="@+id/btn_ace_teamA"
                        style="@style/buttonStyle"
                        android:text="@string/ace" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/block_infoSet_teamB"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/name_teamB"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:padding="@dimen/minimum_padding"
                            android:gravity="center"
                            android:textSize="@dimen/std_subTitleSize"
                            android:textColor="@android:color/white"
                            android:text="@string/name_teamB" />

                        <ImageView
                            android:id="@+id/ball_possession_teamB"
                            android:contentDescription="@string/description_ball_possession"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/score_teamB"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/minimum_padding"
                        android:gravity="center"
                        android:textSize="@dimen/std_scoreSize"
                        android:textColor="@android:color/white"
                        android:text="@string/std_score" />

                    <Button
                        android:id="@+id/btn_addPoint_teamB"
                        style="@style/buttonStyle"
                        android:text="@string/add_Point" />

                    <Button
                        android:id="@+id/btn_ace_teamB"
                        style="@style/buttonStyle"
                        android:text="@string/ace" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_reset_match"
            style="@style/buttonStyle"
            android:text="@string/reset" />

    </LinearLayout>

</ScrollView>
